# block-drive

./: .gitignore  Cargo.toml  dfx.json  icpfs.did  testnet.sh
src/assets/: assets.did  index.js
src/assets/drive/: filesys.js
src/icpfs_controller/: Cargo.toml  controller.did
src/icpfs_controller/src/: lib.rs
src/icpfs_shard/: Cargo.toml  Readme.md  shard.did
src/icpfs_shard/src/: controller.rs  fileSys.rs  lib.rs  path.rs  types.rs
src/icpfs_shard/test/: lib.rs  types.rs
