[package]
name = "icpfs-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# serde_bytes = "0.11"
candid = "0.7.4" # this is required if you want to use the `#[import]` macro
ic-cdk = "0.5"
ic-cdk-macros = "0.5"

ic-utils = "0.18.0"
wasm-tracing-allocator = "0.1.0"
wasm-bindgen-test = "0.3.31"
# The following are used in the file system logic
bitvec = "1"
bincode = "1.3.3"
